// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConversationTurn > compresses the completed trace into the worked disclosure 1`] = `
<section
  aria-live="polite"
  class="turn-activity  is-expanded "
>
  <div
    class="turn-activity-header"
  >
    <button
      aria-controls="turn-activity-detail"
      aria-expanded="true"
      class="turn-activity-summary"
      type="button"
    >
      <span
        class="turn-status-label"
        title="Worked for 3s"
      >
        Worked for 3s
      </span>
      <svg
        class="lucide lucide-chevron-down expanded"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="message-actions"
    >
      <button
        aria-label="Helpful response"
      >
        <svg
          class="lucide lucide-thumbs-up"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10v12"
          />
          <path
            d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
          />
        </svg>
      </button>
      <button
        aria-label="Unhelpful response"
      >
        <svg
          class="lucide lucide-thumbs-down"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 14V2"
          />
          <path
            d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"
          />
        </svg>
      </button>
      <button
        aria-label="Branch from response"
      >
        <svg
          class="lucide lucide-git-fork"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <circle
            cx="18"
            cy="6"
            r="3"
          />
          <path
            d="M18 9v2c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V9"
          />
          <path
            d="M12 12v3"
          />
        </svg>
      </button>
      <button
        aria-label="Copy response"
      >
        <svg
          class="lucide lucide-clipboard"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="4"
            rx="1"
            ry="1"
            width="8"
            x="8"
            y="2"
          />
          <path
            d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="turn-activity-detail"
    id="turn-activity-detail"
  >
    <div
      class="turn-trace turn-trace-item"
    >
      <div
        class="activity-item reasoning-item"
      >
        <button
          aria-expanded="true"
          class="activity-summary"
        >
          <span>
            Thought briefly
          </span>
          <svg
            class="lucide lucide-chevron-down expanded"
            fill="none"
            height="13"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          class="activity-detail reasoning-detail"
        >
          <p>
            Planning the rendering change.
          </p>
          

          <p>
            Checked the renderer lifecycle.
          </p>
        </div>
      </div>
    </div>
    <div
      class="turn-trace turn-trace-item"
    >
      <div
        class="activity-item command-item"
      >
        <button
          aria-expanded="false"
          class="activity-summary "
        >
          <svg
            class="lucide lucide-square-terminal"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 11 2-2-2-2"
            />
            <path
              d="M11 13h4"
            />
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span>
            Ran
          </span>
          <code>
            pnpm test
          </code>
          <svg
            class="lucide lucide-chevron-down"
            fill="none"
            height="13"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`ConversationTurn > shows a live command state without premature completion controls 1`] = `
<section
  aria-live="polite"
  class="turn-activity is-active is-expanded "
>
  <div
    class="turn-activity-header"
  >
    <button
      aria-controls="turn-activity-detail"
      aria-expanded="true"
      class="turn-activity-summary"
      type="button"
    >
      <span
        class="turn-status-label"
        title="Searching “ConversationTurn” in src/renderer"
      >
        Searching “ConversationTurn” in src/renderer
      </span>
      <svg
        class="lucide lucide-chevron-down expanded"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
  <div
    class="turn-activity-detail"
    id="turn-activity-detail"
  >
    <div
      class="turn-trace turn-trace-item"
    >
      <div
        class="activity-item command-item"
      >
        <button
          aria-expanded="true"
          class="activity-summary "
        >
          <svg
            class="lucide lucide-square-terminal"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 11 2-2-2-2"
            />
            <path
              d="M11 13h4"
            />
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span>
            Running
          </span>
          <code>
            rg ConversationTurn src/renderer
          </code>
          <svg
            class="lucide lucide-chevron-down expanded"
            fill="none"
            height="13"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          class="activity-detail terminal-output "
        >
          <div
            class="terminal-output-header"
          >
            <span>
              /workspace
            </span>
            <span>
              Processing
            </span>
          </div>
          <pre>
            Waiting for command output…
          </pre>
        </div>
      </div>
    </div>
  </div>
</section>
`;
